<resources>
    <string name="app_name">School Manager</string>
    <string name="menu_user_change_password">Change password</string>
    <string name="menu_user_logout">Logout</string>
    <string name="menu_main_admin_edit_semester">Edit semester</string>
    <string name="menu_main_admin_delete_semester">Delete semester</string>
    <string name="menu_main_admin_edit_department">Edit department</string>
    <string name="menu_main_admin_delete_department">Delete department</string>
    <string name="menu_main_admin_edit_dept_admin">Edit department admin</string>
    <string name="menu_main_admin_delete_dept_admin">Delete department admin</string>
    <string name="menu_main_admin_edit_lecturer">Edit lecturer</string>
    <string name="menu_main_admin_delete_lecturer">Delete lecturer</string>
    <string name="menu_main_admin_edit_student">Edit student</string>
    <string name="menu_main_admin_delete_student">Delete student</string>
    <string name="menu_main_admin_departments">Departments</string>
    <string name="menu_main_admin_dept_admins">Department Admins</string>
    <string name="menu_main_admin_lecturers">Lecturers</string>
    <string name="menu_main_admin_students">Students</string>
    <string name="menu_main_admin_semesters">Semesters</string>
    <string name="menu_dept_admin_edit_course">Edit course</string>
    <string name="menu_dept_admin_edit_sections">Edit sections</string>
    <string name="menu_dept_admin_delete_course">Delete course</string>
    <string name="menu_dept_admin_courses">Courses</string>
    <string name="menu_dept_admin_lecturers">Lecturers</string>
    <string name="menu_dept_admin_students">Students</string>
    <string name="menu_lecturer_view_grades">View grades</string>
    <string name="menu_lecturer_add_appointment">Add appointment hour</string>
    <string name="menu_lecturer_edit_appointment">Edit appointment hour</string>
    <string name="menu_lecturer_delete_appointment">Delete appointment hour</string>
    <string name="menu_lecturer_course_notes">Course Notes</string>
    <string name="menu_lecturer_grades">Grades</string>
    <string name="menu_lecturer_announcements">Announcements</string>
    <string name="menu_lecturer_participants">Participants</string>
    <string name="menu_lecturer_weekly_schedule_and_appointments">Weekly Schedule and Appointments</string>
    <string name="menu_student_appointment_request">Make appointment request</string>
    <string name="menu_student_course_notes">Course Notes</string>
    <string name="menu_student_grades">Grades</string>
    <string name="menu_student_announcements">Announcements</string>
    <string name="menu_student_weekly_schedule">Weekly Schedule</string>
    <string name="menu_student_appointments">Appointments</string>
    <string name="fragment_user_and_semester_spinner_label">Semester</string>
    <string name="button_indicator_select">SELECT</string>
    <string name="button_indicator_cancel">CANCEL</string>
    <string name="button_indicator_delete">DELETE</string>
    <string name="button_indicator_add">ADD</string>
    <string name="main_admin_departments_dept_name">Department Name</string>
    <string name="main_admin_departments_dept_id">ID</string>
    <string name="main_admin_departments_opened">Opened</string>
    <string name="main_admin_departments_closed">Closed</string>
    <string name="main_admin_dept_admins_id">ID</string>
    <string name="main_admin_dept_admins_name">Name</string>
    <string name="main_admin_dept_admins_surname">Surname</string>
    <string name="main_admin_dept_admins_dept_name">Dept.</string>
    <string name="main_admin_lecturers_id">ID</string>
    <string name="main_admin_lecturers_name">Name</string>
    <string name="main_admin_lecturers_surname">Surname</string>
    <string name="main_admin_lecturers_dept_name">Dept.</string>
    <string name="main_admin_students_id">ID</string>
    <string name="main_admin_students_name">Name</string>
    <string name="main_admin_students_surname">Surname</string>
    <string name="main_admin_students_dept_name">Dept.</string>
    <string name="main_admin_semester">Semester</string>
    <string name="main_admin_semester_start">Start</string>
    <string name="main_admin_semester_end">End</string>
    <string name="dept_admin_courses_id">ID</string>
    <string name="dept_admin_courses_name">Course Name</string>
    <string name="dept_admin_courses_sections">Sections</string>
    <string name="dept_admin_courses_lecturer">Lecturer:</string>
    <string name="dept_admin_courses_add_course_hour">Add Course Hour</string>
    <string name="dept_admin_courses_reset_course_hour">Reset Course Hour</string>
    <string name="dept_admin_show_all_departments">Show all departments</string>
    <string name="dept_admin_lecturers_id">ID</string>
    <string name="dept_admin_lecturers_name">Name</string>
    <string name="dept_admin_lecturers_surname">Surname</string>
    <string name="dept_admin_lecturers_dept_name">Dept.</string>
    <string name="dept_admin_students_id">ID</string>
    <string name="dept_admin_students_name">Name</string>
    <string name="dept_admin_students_surname">Surname</string>
    <string name="dept_admin_students_dept_name">Dept.</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="grade_weight">Weight</string>
    <string name="grade_average_result">Average Result</string>
    <string name="grade_average_point">Average Point</string>
    <string name="grade_result">Result</string>
    <string name="grade_point">Point</string>
    <string name="grade_total">TOTAL</string>
    <string name="student_appointments_this_week">This Week</string>
    <string name="student_appointments_next_week">Next Week</string>
    <string name="student_appointments_available">Available</string>
    <string name="student_appointments_requested">Requested</string>
    <string name="student_appointments_accepted">Accepted</string>
    <string name="student_appointments_not_available">Not Available</string>
    <string name="student_appointments_rejected_cancelled">Rejected/Cancelled</string>
    <string name="lecturer_participants_id">ID</string>
    <string name="lecturer_participants_name">Name</string>
    <string name="lecturer_participants_surname">Surname</string>
    <string name="lecturer_participants_dept_name">Dept.</string>
    <string name="lecturer_students_id">ID</string>
    <string name="lecturer_students_name">Name</string>
    <string name="lecturer_students_surname">Surname</string>
    <string name="lecturer_students_grade">Grade</string>
    <string name="lecturer_remove_hour">Remove Hour</string>
    <string name="lecturer_num_of_stu_allowed">Number of students allowed</string>
    <string name="lecturer_accept_automatically">Accept requests automatically</string>
    <string name="lecturer_add_each_week">Add this hour to each week</string>
    <string name="lecturer_accepted_requests"><u>Accepted Requests</u></string>
    <string name="lecturer_requests"><u>Requests</u></string>
    <string name="lecturer_weekly_schedule_and_appointments_this_week">This Week</string>
    <string name="lecturer_weekly_schedule_and_appointments_next_week">Next Week</string>
    <string name="lecturer_weekly_schedule_and_appointments_course_hour">Course Hour</string>
    <string name="lecturer_weekly_schedule_and_appointments_appointment_hour">Appointment Hour</string>
    <string name="lecturer_reject">Reject</string>
    <string name="lecturer_accept">Accept</string>
    <string name="lecturer_rejected">Rejected</string>
    <string name="lecturer_accepted">Accepted</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_clear">CLEAR</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_new_password_confirm">New Password (Confirm)</string>
    <string name="hint_dept_id">Dept. ID</string>
    <string name="hint_dept_name">Dept. Name</string>
    <string name="hint_semester">Semester</string>
    <string name="hint_semester_start">Start Date</string>
    <string name="hint_semester_end">End Date</string>
    <string name="hint_course_id">Course ID</string>
    <string name="hint_course_name">Course Name</string>
    <string name="hint_sections">Sections</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Content</string>
    <string name="hint_exam_type">Exam Name</string>
    <string name="hint_weight">Exam Weight</string>
    <string name="hint_grade">Grade</string>
    <string name="hint_id">ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_department">Department</string>
    <string name="hint_save_password">Save password</string>
    <string name="hint_keep_logged_in">Keep logged in</string>
    <string name="login">LOGIN</string>
    <string name="warning_login_mismatch">Mismatch on ID and password</string>
    <string name="warning_login_empty_field">Please fill in ID and password fields.</string>
    <string name="warning_change_password_wrong_password">Old password is not correct.</string>
    <string name="warning_change_password_wrong_confirmation">Password confirmation is not correct.</string>
    <string name="warning_change_password_short_password">Password must be between 8-10 characters.</string>
    <string name="warning_change_password_cannot_changed">Password could not be changed. Please try again.</string>
    <string name="warning_dialog_id_length">ID should be 5 digit.</string>
    <string name="warning_add_or_edit_department_duplicated_id">Department with this id already exists.</string>
    <string name="warning_add_or_edit_dept_admin_duplicated_id">Department admin with this id already exists.</string>
    <string name="warning_add_or_edit_lecturer_duplicated_id">Lecturer with this id already exists.</string>
    <string name="warning_add_or_edit_student_duplicated_id">Student with this id already exists.</string>
    <string name="warning_add_or_edit_course_duplicated_id">Course with this code already exists.</string>
    <string name="warning_add_or_edit_department_duplicated_name">Department with this name already exists.</string>
    <string name="warning_add_or_edit_course_duplicated_name">Course with this name already exists.</string>
    <string name="warning_add_or_edit_semester_reverse_order">Start date and end date are not consistent.</string>
    <string name="warning_add_or_edit_semester_low_difference">There should be at least 60 days between start date and end date.</string>
    <string name="warning_add_or_edit_semester_high_difference">There should be at most 150 days between start date and end date.</string>
    <string name="warning_add_course_hour_inconsistency">Start hour and end hour are inconsistent.</string>
    <string name="student_appointment_confirmation">Do you want to make an appointment request?</string>
    <string name="delete_confirmation_department">department(s) will be deleted. Are you sure?</string>
    <string name="delete_confirmation_dept_admin">department admin(s) will be deleted. Are you sure?</string>
    <string name="delete_confirmation_lecturer">lecturer(s) will be deleted. Are you sure?</string>
    <string name="delete_confirmation_student">student(s) will be deleted. Are you sure?</string>
    <string name="delete_confirmation_semester">Semester will be deleted. Are you sure?</string>
    <string name="delete_confirmation_course">courses(s) will be deleted. Are you sure?</string>
    <string name="toast_change_password_successful">Password has been changed.</string>
</resources>