<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/background_dialog">

        <EditText
            android:id="@+id/editText_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_semester_start"
            android:textSize="25sp"
            android:textCursorDrawable="@null"
            android:maxLength="14"
            android:inputType="number"
            app:backgroundTint="@color/light_gray"
            android:gravity="left"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/editText_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_semester_end"
            android:textSize="25sp"
            android:textCursorDrawable="@null"
            android:maxLength="14"
            android:inputType="number"
            app:backgroundTint="@color/light_gray"
            android:gravity="left"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/editText_semester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/hint_semester"
            android:textSize="25sp"
            android:textCursorDrawable="@null"
            android:textColor="@color/black"
            app:backgroundTint="@color/light_gray"
            android:gravity="left"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/textView_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:text="@string/warning_login_mismatch"
            android:gravity="center"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/dialog_cancel"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>

            <Button
                android:id="@+id/button_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/dialog_ok"
                android:textColor="@color/light_black"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>