<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/background_dialog"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp">

        <EditText
            android:id="@+id/editText_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_id"
            android:maxLength="5"
            android:textSize="25sp"
            android:textCursorDrawable="@null"
            app:backgroundTint="@color/light_gray"
            android:gravity="left"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_name"
            android:maxLength="20"
            android:textSize="25sp"
            android:textCursorDrawable="@null"
            app:backgroundTint="@color/light_gray"
            android:gravity="left"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/editText_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_surname"
            android:maxLength="20"
            android:textSize="25sp"
            android:textCursorDrawable="@null"
            app:backgroundTint="@color/light_gray"
            android:gravity="left"
            android:layout_margin="15dp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_spinner_department_lecturer_student_and_hour"
            android:popupBackground="@color/light_gray"
            android:layout_margin="15dp"
            android:padding="10dp" />

        <TextView
            android:id="@+id/textView_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:text="@string/warning_login_mismatch"
            android:gravity="center"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/dialog_cancel"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/button_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/dialog_ok"
                android:textColor="@color/light_black"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>