<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/background_dialog"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp">

        <EditText
            android:id="@+id/editText_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_old_password"
            android:maxLength="10"
            android:textSize="25sp"
            android:textCursorDrawable="@null"
            app:backgroundTint="@color/light_gray"
            android:gravity="left"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/editText_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_new_password"
            android:maxLength="10"
            android:textSize="25sp"
            android:textCursorDrawable="@null"
            app:backgroundTint="@color/light_gray"
            android:gravity="left"
            app:layout_constraintTop_toBottomOf="@id/editText_old_password"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/editText_new_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_new_password_confirm"
            android:maxLength="10"
            android:textSize="25sp"
            android:textCursorDrawable="@null"
            app:backgroundTint="@color/light_gray"
            android:gravity="left"
            app:layout_constraintTop_toBottomOf="@id/editText_new_password"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/textView_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:text="@string/warning_login_mismatch"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/editText_new_password_confirm"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:layout_constraintTop_toBottomOf="@id/textView_warning">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/dialog_cancel"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/button_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/dialog_ok"
                android:textColor="@color/light_black"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"/>

        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>